# aura

./: '  CMakeLists.txt  README.md  hash.py  test.au  test1.au  test2.au
include/aura/: dfa.h  error.h  interpreter.h  machine.h  pda.h  plotter.h  set.h  stack.h  state.h  string.h  token.h
src/: dfa.c  interpreter.c  main.c  pda.c  plotter.c  set.c  stack.c  state.c  string.c  token.c
tests/DFA/: test_1.c  test_2.c
tests/PDA/: test_1.c  test_2.c
